--- a/pages.html
+++ b/pages.html
@@ -1,13 +1,14 @@
 ---
 layout: page
-title: Pages 
+title: 页面 
 header: Pages
 group: navigation
+comments: false
 ---
 {% include JB/setup %}
 
 <h2>All Pages</h2>
 <ul>
-{% assign pages_list = site.pages %}
-{% include JB/pages_list %}
+  {% assign pages_list = site.pages %}
+  {% include JB/pages_list %}
 </ul>
